Issue 5, color contrast changed for some readability

--- a/style/modules.css
+++ b/style/modules.css
@@ -83,7 +83,9 @@ background-image: url("http://www.blog-nouvelles-technologies.fr/wp-content/uplo
   background-image: url("http://www.quertime.com/wp-content/uploads/2011/09/best_websites_to_download_free_twitter_backgrounds_and_themes-120x120.jpg");
 }
 #git {
-  background-image: url("http://www.flavulous.com/imagens/github.png");
+  background-image: url("http://neckbeardinfluence.com/wp-content/uploads/2015/05/professortocat-120x120.png");
+  background-color: yellow;
+  color: white;
 }
 
 .circle:hover {
